refactor(api): standardize syntax and simplify type declarations across security, workflow, and controller modules